--- a/scripts/ExploreERA5TempData.Rmd
+++ b/scripts/ExploreERA5TempData.Rmd
@@ -11,6 +11,7 @@ output: html_document
 ```{r}
 library(tidyverse)
 library(lubridate)
+library(cowplot)
 ```
 
 # Graph theme
@@ -57,7 +58,8 @@ head(manies)
 ```
 # Organize and Clean
 
-## Select, Pivot Air Temp data
+## Manies
+### Select, Pivot Air Temp data
 ```{r}
 manies1 = manies %>%
   dplyr::select(brl_tnd:year, X20010401_mean_2m_air_temperature:X20010930_mean_2m_air_temperature) %>%
@@ -69,12 +71,12 @@ manies1 = manies %>%
   separate(DateTemp, c("tempDate", NA)) %>% 
     mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
 ```
-## Format air temp date
+### Format air temp date
 ```{r}
 manies1$tempDate = ymd(manies1$tempDate)
 ```
 
-## Add Julian day for air temp
+### Add Julian day for air temp
 ```{r}
 manies2 = manies1 %>% mutate(tempJuldt = yday(tempDate))
 ```
@@ -82,24 +84,892 @@ manies2 = manies1 %>% mutate(tempJuldt = yday(tempDate))
 ```{r}
 manies2
 ```
+### Plot Temp data by day
 
-
-# Plot Temp data by day
-
-## Manies
 243 267 215 266 218
 ```{r}
-ggplot(manies2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+p1 = ggplot(manies2, aes(x=tempJuldt, y=TempC)) +
   geom_line() +
-  geom_vline(xintercept=215) + # Aug 3
-  geom_vline(xintercept=218) + # Aug 6
-  geom_vline(xintercept=243) + # Aug 31
-  geom_vline(xintercept=266) + # Sept 23
-  geom_vline(xintercept=267) + #Sept 24
+  geom_vline(xintercept=215, colour = "red") + # Aug 3
+  geom_vline(xintercept=267, colour="red") + #Sept 24
   reg_theme +
   xlab("Julian date") +
-  ylab("Temperature in degrees Celecius") +
-  geom_text(aes(x=215, label="Aug 3", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8)) +
-  geom_text(aes(x=243, label="Aug 31", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8)) +
-  geom_text(aes(x=266, label="Sept 23", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8))
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=215, y=-5,label="Aug 3"), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=267, y=-5, label="Sept 24"), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Manies 2005",), colour="grey",  text=element_text(size=7)) 
+
+p1
+```
+
+## Natali 2016
+### Select, Pivot Air Temp data
+```{r}
+natali2016_1 = natali2016 %>%
+  dplyr::select(brl_tnd:year, X20160401_mean_2m_air_temperature:X20160930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+natali2016_1$tempDate = ymd(natali2016_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+natali2016_2 = natali2016_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+natali2016_2
+```
+
+### Plot Temp data by day
+
+Aug 2
+Sept 6
+Sept 15, 16, 17, 18, 19
+
+249 214 260  NA 261 259 262
+```{r}
+p2 = ggplot(natali2016_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=214, colour = "red") + # Aug 2
+  geom_vline(xintercept=262, colour = "red") + #Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=214, label="Aug 2", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=259, label="Sept 15", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 19, label="Natali 2016"), colour="grey", text=element_text(size=7)) 
+```
+
+## Natali 2017
+### Select, Pivot Air Temp data
+```{r}
+natali2017_1 = natali2017 %>%
+  dplyr::select(brl_tnd:year, X20170401_mean_2m_air_temperature:X20170930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+natali2017_1$tempDate = ymd(natali2017_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+natali2017_2 = natali2017_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+natali2017_2
+```
+
+### Plot Temp data by day
+
+Aug 2
+Sept 6
+Sept 15, 16, 17, 18, 19
+
+249 214 260  NA 261 259 262
+```{r}
+p3 = ggplot(natali2017_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=214, colour = "red") + # Aug 2
+  geom_vline(xintercept=262, colour = "red") + #Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=214, label="Aug 2", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=259, label="Sept 15", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 20, label="Natali 2017"), colour="grey", text=element_text(size=7)) 
+```
+
+## O'Donnell 2005
+### Select, Pivot Air Temp data
+```{r}
+odonnell2005_1 = odonnell2005 %>%
+  dplyr::select(brl_tnd:year, X20050401_mean_2m_air_temperature:X20050930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+odonnell2005_1$tempDate = ymd(odonnell2005_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+odonnell2005_2 = odonnell2005_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+odonnell2005_2
+```
+
+### Plot Temp data by day
+
+"2007-09-11" "2007-09-12" "2007-09-14" "2007-09-13" "2007-09-15" "2007-09-17" "2008-09-03"
+ "2008-09-04" "2008-09-05"
+
+254 255 257 256 258 260 247 248 249
+```{r}
+p4 = ggplot(odonnell2005_2, aes(x=tempJuldt, y=TempC)) +
+  geom_line() +
+  geom_vline(xintercept=247, colour = "red") + # Sept 3
+  geom_vline(xintercept=260, colour = "red") + # Sept 17
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature  (Celecius)") +
+  geom_text(aes(x=247, label="Sept 3", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=260, label="Sept 17", y=-5), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=175, y= -10, label="O'Donnell 2005"), colour="grey",  text=element_text(size=7)) 
+```
+
+## Olefeldt 2015
+### Select, Pivot Air Temp data
+```{r}
+olefeldt2015_1 = olefeldt2015 %>%
+  dplyr::select(brl_tnd:year, X20150401_mean_2m_air_temperature:X20150930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+olefeldt2015_1$tempDate = ymd(olefeldt2015_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+olefeldt2015_2 = olefeldt2015_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+olefeldt2015_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p5 = ggplot(olefeldt2015_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour = "red") + # Sept 8
+  geom_vline(xintercept=261, colour = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=175, y= -10, label="Olefeldt 2015"), colour="grey", text=element_text(size=7)) 
+```
+
+## Olefeldt 2016
+### Select, Pivot Air Temp data
+```{r}
+olefeldt2016_1 = olefeldt2016 %>%
+  dplyr::select(brl_tnd:year, X20160401_mean_2m_air_temperature:X20160930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+olefeldt2016_1$tempDate = ymd(olefeldt2016_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+olefeldt2016_2 = olefeldt2016_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+olefeldt2016_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p6 = ggplot(olefeldt2016_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour = "red") + # Sept 8
+  geom_vline(xintercept=261, colour = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=175, y= -10, label="Olefeldt 2016"), colour="grey", text=element_text(size=7)) 
+```
+
+## Olefeldt 2020
+```{r}
+names(olefeldt2020)
+```
+### Select, Pivot Air Temp data
+```{r eval=FALSE, include=FALSE}
+olefeldt2020_1 = olefeldt2020 %>%
+  dplyr::select(brl_tnd:year, X20200401_mean_2m_air_temperature:X20200930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r eval=FALSE, include=FALSE}
+olefeldt2020_1$tempDate = ymd(olefeldt2020_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r eval=FALSE, include=FALSE}
+olefeldt2020_2 = olefeldt2020_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r eval=FALSE, include=FALSE}
+olefeldt2020_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r eval=FALSE, include=FALSE}
+p7 = ggplot(olefeldt2020_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour = "red") + # Sept 8
+  geom_vline(xintercept=261, colour = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Olefeldt 2020"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2008
+### Select, Pivot Air Temp data
+```{r}
+Rocha2008_1 = Rocha2008 %>%
+  dplyr::select(brl_tnd:year, X20080401_mean_2m_air_temperature:X20080930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2008_1$tempDate = ymd(Rocha2008_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2008_2 = Rocha2008_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2008_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p8 = ggplot(Rocha2008_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour= "red") + # Sept 8
+  geom_vline(xintercept=261, colour = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-12), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-12), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2008"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2009
+### Select, Pivot Air Temp data
+```{r}
+Rocha2009_1 = Rocha2009 %>%
+  dplyr::select(brl_tnd:year, X20090401_mean_2m_air_temperature:X20090930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2009_1$tempDate = ymd(Rocha2009_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2009_2 = Rocha2009_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2009_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p9 = ggplot(Rocha2009_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour = "red") + # Sept 8
+  geom_vline(xintercept=261, color = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-12), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-12), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2009"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2010
+### Select, Pivot Air Temp data
+```{r}
+Rocha2010_1 = Rocha2010 %>%
+  dplyr::select(brl_tnd:year, X20100401_mean_2m_air_temperature:X20100930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2010_1$tempDate = ymd(Rocha2010_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2010_2 = Rocha2010_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2010_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p10 = ggplot(Rocha2010_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-11), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-11), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2010"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2011
+### Select, Pivot Air Temp data
+```{r}
+Rocha2011_1 = Rocha2011 %>%
+  dplyr::select(brl_tnd:year, X20110401_mean_2m_air_temperature:X20110930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2011_1$tempDate = ymd(Rocha2011_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2011_2 = Rocha2011_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2011_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p11 = ggplot(Rocha2011_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-12), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-12), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2011"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2012
+### Select, Pivot Air Temp data
+```{r}
+Rocha2012_1 = Rocha2012 %>%
+  dplyr::select(brl_tnd:year, X20120401_mean_2m_air_temperature:X20120930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2012_1$tempDate = ymd(Rocha2012_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2012_2 = Rocha2012_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2012_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p12 = ggplot(Rocha2012_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-12), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-12), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 14, label="Rocha 2012"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2013
+### Select, Pivot Air Temp data
+```{r}
+Rocha2013_1 = Rocha2013 %>%
+  dplyr::select(brl_tnd:year, X20130401_mean_2m_air_temperature:X20130930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2013_1$tempDate = ymd(Rocha2013_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2013_2 = Rocha2013_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2013_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p13 = ggplot(Rocha2013_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-20), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-20), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2013"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2014
+### Select, Pivot Air Temp data
+```{r}
+Rocha2014_1 = Rocha2014 %>%
+  dplyr::select(brl_tnd:year, X20140401_mean_2m_air_temperature:X20140930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2014_1$tempDate = ymd(Rocha2014_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2014_2 = Rocha2014_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2014_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p14 = ggplot(Rocha2014_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 12, label="Rocha 2014"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2015
+### Select, Pivot Air Temp data
+```{r}
+Rocha2015_1 = Rocha2015 %>%
+  dplyr::select(brl_tnd:year, X20150401_mean_2m_air_temperature:X20150930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2015_1$tempDate = ymd(Rocha2015_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2015_2 = Rocha2015_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2015_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p15 = ggplot(Rocha2015_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour = "red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-15), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-15), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 17, label="Rocha 2015"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2016
+### Select, Pivot Air Temp data
+```{r}
+Rocha2016_1 = Rocha2016 %>%
+  dplyr::select(brl_tnd:year, X20160401_mean_2m_air_temperature:X20160930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2016_1$tempDate = ymd(Rocha2016_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2016_2 = Rocha2016_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2016_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p16 = ggplot(Rocha2016_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2016"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2017
+### Select, Pivot Air Temp data
+```{r}
+Rocha2017_1 = Rocha2017 %>%
+  dplyr::select(brl_tnd:year, X20170401_mean_2m_air_temperature:X20170930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2017_1$tempDate = ymd(Rocha2017_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2017_2 = Rocha2017_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2017_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p17 = ggplot(Rocha2017_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2017"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2018
+### Select, Pivot Air Temp data
+```{r}
+Rocha2018_1 = Rocha2018 %>%
+  dplyr::select(brl_tnd:year, X20180401_mean_2m_air_temperature:X20180930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2018_1$tempDate = ymd(Rocha2018_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2018_2 = Rocha2018_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2018_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p18 = ggplot(Rocha2018_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2018"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2019
+### Select, Pivot Air Temp data
+```{r}
+Rocha2019_1 = Rocha2019 %>%
+  dplyr::select(brl_tnd:year, X20190401_mean_2m_air_temperature:X20190930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r}
+Rocha2019_1$tempDate = ymd(Rocha2019_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r}
+Rocha2019_2 = Rocha2019_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r}
+Rocha2019_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r}
+p19 = ggplot(Rocha2019_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-10), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-10), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2019"), colour="grey", text=element_text(size=7)) 
+```
+
+## Rocha 2020
+### Select, Pivot Air Temp data
+```{r eval=FALSE, include=FALSE}
+Rocha2020_1 = Rocha2020 %>%
+  dplyr::select(brl_tnd:year, X20200401_mean_2m_air_temperature:X20200930_mean_2m_air_temperature) %>%
+  pivot_longer(
+    cols = starts_with("X"),
+    names_to = "DateTemp",
+    values_to = "TempC",
+    values_drop_na = TRUE) %>% 
+  separate(DateTemp, c("tempDate", NA)) %>% 
+    mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
+```
+### Format air temp date
+```{r eval=FALSE, include=FALSE}
+Rocha2020_1$tempDate = ymd(Rocha2020_1$tempDate)
+```
+
+### Add Julian day for air temp
+```{r eval=FALSE, include=FALSE}
+Rocha2020_2 = Rocha2020_1 %>% mutate(tempJuldt = yday(tempDate))
+```
+
+```{r eval=FALSE, include=FALSE}
+Rocha2020_2
+```
+
+### Plot Temp data by day
+
+sept 8
+Sept 18
+```{r eval=FALSE, include=FALSE}
+p20  = ggplot(Rocha2020_2, aes(x=tempJuldt, y=TempC, color=site_id)) +
+  geom_line() +
+  geom_vline(xintercept=251, colour="red") + # Sept 8
+  geom_vline(xintercept=261, colour="red") + # Sept 18
+  reg_theme +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=251, label="Sept 8", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=6)) +
+  geom_text(aes(x=261, label="Sept 18", y=-5), colour="grey", angle=90, vjust = 0.5, text=element_text(size=6)) + 
+  geom_text(aes(x=120, y= 15, label="Rocha 2020"), colour="grey", text=element_text(size=7)) 
+```
+
+# Combine plots
+
+```{r fig.height=7, fig.width=6}
+g1 = cowplot::plot_grid(p1, p2, p3, p4, p5, p6, ncol = 2)
+g1
+```
+```{r fig.height=7, fig.width=6}
+g2 = cowplot::plot_grid(p8, p9, p10, p11, p12, p13, ncol = 2)
+g2
+```
+
+```{r fig.height=7, fig.width=6}
+g3 = cowplot::plot_grid(p14, p15, p16, p17, p18, p19, ncol = 2)
+g3
+```
+
+
+
+
+```{r eval=FALSE, include=FALSE}
+ggsave("../figures/TempDay1.tiff", plot = g1, width = 6, height =7, units = c("in"), dpi=600, bg = "white" )
+ggsave("../figures/TempDay2.tiff", plot = g2, width = 6, height =7, units = c("in"), dpi=600, bg = "white" )
+ggsave("../figures/TempDay3.tiff", plot = g3, width = 6, height =7, units = c("in"), dpi=600, bg = "white" )
 ```
